--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "access": "public"
   },
   "devDependencies": {
+    "@types/inquirer": "^7.3.1",
     "@types/node": "^14.14.24",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "cac": "^6.7.1"
+    "cac": "^6.7.1",
+    "chalk": "^4.1.0",
+    "inquirer": "^7.3.3"
   }
 }
