--- a/templates/vue/package.json
+++ b/templates/vue/package.json
@@ -1,3 +1,21 @@
 {
-	"name": "vue"
+  "name": "vue-oasis",
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vuedx-typecheck . && vite build",
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "oasis-engine": "^0.2.0",
+    "vue": "^3.0.5"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^1.1.4",
+    "@vue/compiler-sfc": "^3.0.5",
+    "@vuedx/typecheck": "^0.6.0",
+    "@vuedx/typescript-plugin-vue": "^0.6.0",
+    "typescript": "^4.1.3",
+    "vite": "^2.0.0-beta.65"
+  }
 }
