--- a/templates/vanilla/package.json
+++ b/templates/vanilla/package.json
@@ -1,3 +1,17 @@
 {
-	"name": "vanilla"
+  "name": "test-for-vite",
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "devDependencies": {
+    "vite": "^2.0.0-beta.64"
+  },
+  "dependencies": {
+    "@oasis-engine/framebuffer-picker": "^0.2.0",
+    "@oasis-engine/controls": "^0.2.0",
+    "oasis-engine": "^0.2.0"
+  }
 }
