--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@oasis-engine/create-oasis-app",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev": "tsc -w"
+    "dev": "tsc -w",
+    "prepublishOnly": "y build"
   },
   "repository": {
     "type": "git",
