--- a/templates/minigame/package.json
+++ b/templates/minigame/package.json
@@ -11,9 +11,6 @@
   },
   "dependencies": {
     "@oasis-engine/controls": "^0.5.7",
-    "geometry-extrude": "^0.1.3",
-    "jimp": "^0.16.1",
-    "oasis-engine": "^0.5.7",
-    "three": "^0.133.1"
+    "oasis-engine": "^0.5.7"
   }
 }
