--- a/templates/vanilla/package.json
+++ b/templates/vanilla/package.json
@@ -7,7 +7,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.0.0-beta.64"
+    "vite": "^2"
   },
   "dependencies": {
     "oasis-engine": "^0.5"
