--- a/templates/vue/package.json
+++ b/templates/vue/package.json
@@ -3,19 +3,17 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vuedx-typecheck . && vite build",
+    "build": "vue-tsc --noEmit --skipLibCheck && vite build",
     "serve": "vite preview"
   },
   "dependencies": {
     "oasis-engine": "^0.6",
-    "vue": "^3.0.5"
+    "vue": "^3.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.1.4",
-    "@vue/compiler-sfc": "^3.0.5",
-    "@vuedx/typecheck": "^0.6.0",
-    "@vuedx/typescript-plugin-vue": "^0.6.0",
+    "@vitejs/plugin-vue": "^2.2.0",
     "typescript": "^4.1.3",
+    "vue-tsc": "^0.29.8",
     "vite": "^2"
   }
 }
