--- a/templates/miniprogram/package.json
+++ b/templates/miniprogram/package.json
@@ -14,7 +14,7 @@
     "mode": "yarn"
   },
   "dependencies": {
-    "oasis-engine": "^0.8.0-beta.30",
+    "oasis-engine": "^0.8.2",
     "@oasis-engine/physics-lite": "^0.8.0-beta.30",
     "@oasis-engine-toolkit/controls": "^0.8.0-beta.8",
     "@oasis-engine/miniprogram-adapter": "^0.3.6"
