Fix create error

--- a/templates/miniprogram/package.json
+++ b/templates/miniprogram/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@galacean/engine": "^0.9",
-    "@galacean/physics-lite": "^0.9",
+    "@galacean/engine-physics-lite": "^0.9",
     "@galacean/engine-toolkit": "^0.9",
     "@galacean/engine-miniprogram-adapter": "^0.0.1"
   }
