feat: upgrade vue template & pnpm workspace for templates

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc -w",
+    "dev:vue": "pnpm -C templates/vue dev",
     "prepublishOnly": "npm run build"
   },
   "repository": {
