--- a/templates/vue/package.json
+++ b/templates/vue/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "vue-galacean",
+  "name": "vite-project",
+  "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit --skipLibCheck && vite build",
-    "serve": "vite preview"
+    "build": "vue-tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@galacean/engine": "^0.9",
-    "vue": "^3.2.0"
+    "@galacean/engine": "1.0.0-beta.17",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.2.0",
-    "typescript": "^4.1.3",
-    "vue-tsc": "^0.29.8",
-    "vite": "^2"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "typescript": "^5.0.2",
+    "vite": "^4.4.5",
+    "vue-tsc": "^1.8.5"
   }
 }
