--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@galacean/create-galacean-app",
-  "version": "0.9.4",
+  "name": "create-galacean",
+  "version": "0.9.5",
   "description": "",
   "main": "lib/index.js",
   "types": "types/index.d.ts",
@@ -16,7 +16,8 @@
     "build": "tsc",
     "dev": "tsc -w",
     "dev:vue": "pnpm -C templates/vue dev",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "release": "bumpp"
   },
   "repository": {
     "type": "git",
@@ -39,11 +40,12 @@
   },
   "devDependencies": {
     "@types/inquirer": "^7.3.1",
-    "@types/node": "^14.14.24",
+    "@types/node": "^20.10.5",
+    "bumpp": "^9.2.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "cac": "^6.7.1",
+    "cac": "^6.7.14",
     "chalk": "^4.1.0",
     "inquirer": "^7.3.3"
   }
